tests/ui/parser/nested-bad-turbofish.rs
fn main() {
    foo<<S as T>::V>(); //~ ERROR
}
